[FIX]: Login image right white space

--- a/src/pages/Login/style.scss
+++ b/src/pages/Login/style.scss
@@ -1,7 +1,7 @@
 @import "../../index.scss";
 
 .login-container {
-  width: calc(100vw - 20px);
+  width: calc(100vw - 15px);
   height: 100vh;
   .left-col {
     padding: 0 !important;
